--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -16,14 +16,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome</title>
-    <link rel="stylesheet" type="text/css" href="app-stylesheets/boring-style.css">
+    <meta charset="utf-8">
+    <title>APP</title>
+    <link rel="stylesheet" href="style.css">
+
+<!--  -->
+<div class="topnav">
+  <a class="active" href="#appname">APP</a>
+  <a href="#login">Log In</a>
+</div>
+
+    <h1>App Website</h1>
+    <h2>Feed</h2>
   </head>
   <body>
-    <form method=POST action="/">
-      Your Favorite Food:<br>
-      <input type="text" name="user-fav-food" value="Nachos">
-      <input type="submit" value="I'm Hungry">
-    </form>
+
   </body>
 </html>
