--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,7 +23,7 @@
 <!--  -->
 <div class="topnav">
   <a class="active" href="#appname">APP</a>
-  <a href="#login">Log In</a>
+  <a href="{{auth_url}}">{{greeting}}</a>
 </div>
 
     <h1>App Website</h1>
