--- a/templates/style.css
+++ b/templates/style.css
@@ -1,9 +1,94 @@
-.topnav {
-  background-color: #b7eba5;
-  overflow: hidden;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-.topnav a {
-  color: white;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+#main {
+  max-width: 500px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 90vh;
+}
+
+#nav {
+  height: 30px;
+  padding: 8px;
   text-align: center;
-  font-size: 20px;
+}
+
+#nav h1 {
+  display: inline;
+}
+
+button {
+  margin-top: 5px;
+}
+
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
+
+.content-item {
+  padding: 10px;
+  margin: 10px;
+  flex: 1;
+}
+
+footer {
+  padding: 10px;
+  font-size: 10px;
+}
+
+.red {
+  background-color: red;
+  color: white;
+}
+
+.blue {
+  background-color: blue;
+  color: white;
 }
