--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,17 +19,26 @@
     <meta charset="utf-8">
     <title>APP</title>
     <link rel="stylesheet" href="style.css">
-
-<!--  -->
-<div class="topnav">
-  <a class="active" href="#appname">APP</a>
-  <a href="#login">Log In</a>
-</div>
-
-    <h1>App Website</h1>
-    <h2>Feed</h2>
   </head>
   <body>
+    <div class="topnav">
+      <a href="#appname">APP</a>
+      <a class="login" href="#login">Login</a>
+
+
+    </div>
+
+
+        <h1>App Website</h1>
+        <h2>Feed</h2>
+
+
+<div id="main">
+  <div class="content-item red">The posts will be here</div>
+  <footer class="green">
+    info about us (the footer)
+    </footer>
+</div>
 
   </body>
 </html>
