--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,7 +18,7 @@
 <html>
 <head>
   <title>Our great recycling app</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="app-stylesheets/style.css">
 </head>
 <body>
   <div id="nav">
