minor change to app.yaml

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,7 +18,7 @@
 <html>
 <head>
   <title>Our great recycling app</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="template/style.css">
 </head>
 <body>
   <div id="nav">
@@ -30,7 +30,7 @@
     <div class="content-item red">Here is the feed (posts)</div>
     <div class="content-item blue">about this</div>
     <footer class="red">
-      About us Contac
+      About us Contact
     </footer>
   </div>
 </body>
