--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div id="nav">
-    <a class="active" href="#appname">APP</a>
-    <a href="{{auth_url}}">{{greeting}}</a>
+    <a href="#appname">APP</a>
+    <a id="loginbuttom" href="{{auth_url}}">{{greeting}}</a>
   </div>
   <h1>App Website</h1>
   <div id="main">
