--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,19 +18,17 @@
 <html>
 <head>
   <title>Our great recycling app</title>
-<<<<<<< HEAD
   <link rel="stylesheet" href="template/style.css">
-=======
   <link rel="stylesheet" href="style.css">
->>>>>>> 486964e4b46a2319d4fba454ba3332e6efb12721
 </head>
-<body>
-  <div id="nav">
-    <a class="active" href="#appname">APP</a>
-    <a href="{{auth_url}}">{{greeting}}</a>
-  </div>
-  <h1>App Website</h1>
-  <div id="main">
+<body class="Site">
+  <main class="Site-content">…</main>
+    <div id="nav">
+      <a>APPNAME</a>
+      <a href="{{auth_url}}">{{greeting}}</a>
+    </div>
+    <h1>App Website</h1>
+    <div id="main">
     <div class="content-item red">Here is the feed (posts)</div>
     <div class="content-item blue">about this</div>
     <footer class="red">
