--- a/templates/style.css
+++ b/templates/style.css
@@ -1,23 +1,25 @@
+form {
+  float: left;
+}
 h1 {
   text-align: center;
-  padding: 14px;
   font-size: 20px;
 }
 body {
-  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 #nav {
-  background-color: #b7eba5;
   overflow: hidden;
+  background-color: #333;
 }
 
 #nav a {
   float: left;
-  padding: 16px 18px;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
-  font-size: 18px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 .Site {
