--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,13 +18,14 @@
 <html>
 <head>
   <title>Our great recycling app</title>
-  <link rel="stylesheet" href="template/style.css">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="Site">
   <main class="Site-content">
   <div id="nav">
     <a href="#appname">APP</a>
+    <a href=" ">Post</a>
     <a id="loginbuttom" href="{{auth_url}}">{{greeting}}</a>
   </div>
   <h1>App Website</h1>
