post html syntax

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -4,7 +4,6 @@
       <title>Our great recycling app</title>
       <link rel="stylesheet" href="style.css">
 
-
 <body class="Site">
   <main class="Site-content">
   <div id="nav">
@@ -14,11 +13,11 @@
   <h1>App Website</h1>
   <div id="main">
       <h2>Post your item</h2>
-    <form method="post" action="/ ">
+    <form method="post" action="/">
       <p> Item title:</p>
-      <input type= "text" name="firstname" value="">
+      <input type= "text" name="title" value="">
       <p> Description of your item:</p>
-      <input type= "text" name="flastname" value=""><br>
+      <input type= "text" name="caption" value=""><br>
       <input type= "submit" value="Post">
     </form>
     <div class="content-item red">Here is the feed (posts)</div>
