--- a/templates/style.css
+++ b/templates/style.css
@@ -3,19 +3,20 @@ form {
 }
 h1 {
   text-align: center;
-  font-size: 20px;
+  font-size: 20px
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 #nav {
   overflow: hidden;
-  background-color: #333;
+  background-color: black;
+  margin-bottom: 20px;
 }
 
 #nav a {
   float: left;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -113,16 +114,21 @@ button {
 }
 
 footer {
-  padding: 10px;
-  font-size: 10px;
+  float: left;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  width: 100%;
 }
 
+
 .red {
-  background-color: red;
+  background-color: black;
   color: white;
 }
 
 .blue {
-  background-color: blue;
+  background-color: yellow;
   color: white;
 }
