--- a/templates/posts.html
+++ b/templates/posts.html
@@ -8,7 +8,7 @@
 <body class="Site">
   <main class="Site-content">
     <div id="nav">
-      <a href="#appname"><b>APP</b></a>
+      <a href="/"><b>APP</b></a>
       <a href="/new"><b>POST</b></a>
       <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
     </div>
