--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -38,9 +38,9 @@
   <h1>App Website</h1>
   <div id="main">
     <div class="content-item red">Here is the feed (posts)</div>
-    {% for item in items }
+    {% for item in items %}
       <div>{{item.title}}</div>
-    {% endfor }
+    {% endfor %}
 
   <div class="content-item blue">about this</div>
   </div>
