--- a/templates/posts.html
+++ b/templates/posts.html
@@ -8,8 +8,8 @@
 <body class="Site">
   <main class="Site-content">
     <div id="nav">
-      <a href="/"><b>APP</b></a>
-      <a href="/new"><b>POST</b></a>
+      <a id="link1" href="/"><b>APP</b></a>
+      <a id="link1" href="/new"><b>POST</b></a>
       <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
     </div>
   <h1>App Website</h1>
