the whole entire feed functionality

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -32,16 +32,26 @@
   <main class="Site-content">
   <div id="nav">
     <a id="link1" href="/"><b>APP</b></a>
-    <a id="link1" href="/new"><b>POST</b></a>
+    <a id="link1" href="/new-post"><b>POST</b></a>
     <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
   </div>
   <h1>App Website</h1>
   <div id="main">
-    <div class="content-item red">Here is the feed (posts)</div>
-    {% for item in items %}
-      <div>{{item.title}}</div>
-    {% endfor %}
+    <div class="content-item red">
+      <h1>Your Posts</h1>
+      {% for post in your_own_posts %}
+        <p>{{post.title}}</p>
+      {% endfor %}
+      <h4>The fetched records from the query look like this</h4>
+      {{your_own_posts}}
 
+      <h1>People's Posts</h1>
+      {% for post in everyones_posts %}
+        <p>{{post.title}}</p>
+      {% endfor %}
+      <h4>The fetched records from the query look like this</h4>
+      {{everyones_posts}}
+    </div>
   <div class="content-item blue">about this</div>
   </div>
   <footer class="red">
