commented out query

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -42,15 +42,15 @@
       {% for post in your_own_posts %}
         <p>{{post.title}}</p>
       {% endfor %}
-      <h4>The fetched records from the query look like this</h4>
-      {{your_own_posts}}
+      <!--<h4>The fetched records from the query look like this</h4>
+      {{your_own_posts}}-->
 
       <h1>People's Posts</h1>
       {% for post in everyones_posts %}
         <p>{{post.title}}</p>
       {% endfor %}
-      <h4>The fetched records from the query look like this</h4>
-      {{everyones_posts}}
+      <!--<h4>The fetched records from the query look like this</h4>
+      {{everyones_posts}}-->
     </div>
   <div class="content-item blue">about this</div>
   </div>
