removed yellow box

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -31,8 +31,8 @@
 <body class="Site">
   <main class="Site-content">
   <div id="nav">
-    <a id="link1" href="/new-post"><b>APP</b></a>
-    <a id="link1" href="/"><b>POST</b></a>
+    <a id="link1" href="/"><b>APP</b></a>
+    <a id="link1" href="/new-post"><b>POST</b></a>
     <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
   </div>
   <h1>App Website</h1>
@@ -52,7 +52,7 @@
       <!--<h4>The fetched records from the query look like this</h4>
       {{everyones_posts}}-->
     </div>
-  <div class="content-item blue">about this</div>
+  
   </div>
   <footer class="red">
     About us Contact
