fixed bug that wouldnt display on home page

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -17,9 +17,9 @@
       <h2>Post your item</h2>
     <form method="post" action="/new-post">
       <p> Item title:</p>
-      <input type= "text" name="firstname" value="">
+      <input type= "text" name="title" value="">
       <p> Description of your item:</p>
-      <input type= "text" name="flastname" value=""><br>
+      <input type= "text" name="caption" value=""><br>
       <input type= "submit" value="Post">
     </form>
 
