--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -38,7 +38,7 @@
   <h1>App Website</h1>
   <div id="main">
     <div class="content-item red">
-      <h1>Your Posts</h1>
+      <h1 >Your Posts</h1>
       {% for post in your_own_items %}
         <p id="title">{{post.title}}</p>
         <p>{{post.caption}}</p>
@@ -48,7 +48,7 @@
       <!--<h4>The fetched records from the query look like this</h4>
       {{your_own_posts}}-->
 
-      <h1>People's Posts</h1>
+      <h1>Posts</h1>
       {% for post in everyones_items %}
         <p id="title">{{post.title}}</p>
         <p>{{post.caption}}</p>
