image display works

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -19,7 +19,9 @@
       <p> Item title:</p>
       <input type= "text" name="title" value="">
       <p> Description of your item:</p>
-      <input type= "text" name="caption" value=""><br>
+      <input type= "text" name="caption" value="">
+      <p> Image's URL:</p>
+      <input type= "text" name="image_url" value=""><br>
       <input type= "submit" value="Post">
     </form>
 
