new HTML for myPosts

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -10,7 +10,7 @@
     <div id="nav">
       <a id="link1" href="/"><b>APP</b></a>
       <a id="link1" href="/new-post"><b>POST</b></a>
-      <a id="link1" href="   "><b>my POSTs</b></a> 
+      <a id="link1" href="/my-posts"><b>my POSTs</b></a> 
       <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
     </div>
   <h1>App Website</h1>
