--- a/templates/my-posts.html
+++ b/templates/my-posts.html
@@ -17,7 +17,7 @@
   <div id="nav">
     <a id="link1" href="/"><b>APP</b></a>
     <a id="link1" href="/new-post"><b>POST</b></a>
-    <a id="link1" href="   "><b>my POSTs</b></a>    
+    <a id="link1" href="/my-posts"><b>my POSTs</b></a>
     <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
   </div>
   <h1>App Website</h1>
@@ -29,12 +29,7 @@
         <p>{{post.caption}}</p>
           <p>{{post.image}}</p>
       {% endfor %}
-
-      <!--<h4>The fetched records from the query look like this</h4>
-      {{your_own_posts}}-->
-
     </div>
-
   </div>
   <footer class="red">
     About us Contact
