--- a/templates/my-posts.html
+++ b/templates/my-posts.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <footer class="red">
-    About us     Contact     Share
+    About us | Contact | Share
   </footer>
   </main>
 
