--- a/templates/posts.html
+++ b/templates/posts.html
@@ -29,7 +29,7 @@
   </div>
   </main>
   <footer class="red">
-    About us     Contact
+    About us | Contact | Share
   </footer>
 </body>
 </html>
