--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -38,8 +38,7 @@
   </div>
   <h1>App Website</h1>
   <div id="main">
-    <div class="content-item red">
-
+    <div id = "postformat" class="content-item footercolor">
       <h1>Posts</h1>
       {% for post in everyones_items %}
         <p id="title">{{post.title}}</p>
@@ -51,7 +50,7 @@
     </div>
 
   </div>
-  <footer class="red">
+  <footer class="footercolor">
     About us | Contact | Share
   </footer>
   </main>
