--- a/templates/style.css
+++ b/templates/style.css
@@ -1,10 +1,14 @@
 #images{
   height: 200px;
-  width: 50%;
+  /*width: 50%;*/
 }
 /* here */
 #title{
   font-size: 20px;
+}
+.grid {
+  width: 300px;
+
 }
 
 form {
@@ -24,7 +28,11 @@ body {
 #link1 {
     float: left;
 }
-
+#postformat {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+}
 
 #nav {
   height: 32px;
@@ -102,10 +110,8 @@ table {
 
 
 #main {
-  max-width: 1270px;
+  /*max-width: 1270px;*/
   margin: auto;
-  display: flex;
-  flex-direction: column;
   min-height: 90vh;
 }
 
