--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -38,12 +38,14 @@
   </div>
   <h1>App Website</h1>
   <div id="main">
+    <h1>Posts</h1>
     <div id = "postformat" class="content-item footercolor">
-      <h1>Posts</h1>
       {% for post in everyones_items %}
-        <p id="title">{{post.title}}</p>
-        <img id="images" src="{{post.image_url}}">
-        <p>{{post.caption}}</p>
+        <div class="grid">
+          <p id="title">{{post.title}}</p>
+          <img id="images" src="{{post.image_url}}">
+          <p>{{post.caption}}</p>
+        </div>
       {% endfor %}
 
       <!--<h4>The fetched records from the query look like this</h4> {{everyones_posts}}-->
