--- a/templates/my-posts.html
+++ b/templates/my-posts.html
@@ -22,14 +22,21 @@
   </div>
   <h1>App Website</h1>
   <div id="main">
-    <div class="content-item red">
-      <h1 >Your Posts</h1>
-      {% for post in everyones_items %}
-        <p id="title">{{post.title}}</p>
-        <img id="images" src="{{post.image_url}}">
-        <p>{{post.caption}}</p>
+    <h1>Posts</h1>
+    <div id = "postformat" class="content-item footercolor">
+      {% for post in your_own_items %}
+        <div class="grid">
+          <p id="title">{{post.title}}</p>
+          <img id="images" src="{{post.image_url}}">
+          <p>{{post.caption}}</p>
+        </div>
       {% endfor %}
+
+      <!--<h4>The fetched records from the query look like this</h4> {{everyones_posts}}-->
     </div>
+
+
+
   </div>
   <footer class="red">
     About us | Contact | Share
