--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -39,7 +39,7 @@
   <h1>App Website</h1>
   <div id="main">
     <h1>Posts</h1>
-    <div id = "postformat" class="content-item footercolor">
+    <div id = "postformat" class="content-item red">
       {% for post in everyones_items %}
         <div class="grid">
           <p id="title">{{post.title}}</p>
@@ -52,7 +52,7 @@
     </div>
 
   </div>
-  <footer class="footercolor">
+  <footer class="red">
     About us | Contact | Share
   </footer>
   </main>
