--- a/templates/my-posts.html
+++ b/templates/my-posts.html
@@ -22,8 +22,8 @@
   </div>
   <h1>App Website</h1>
   <div id="main">
-    <h1>Posts</h1>
-    <div id = "postformat" class="content-item footercolor">
+    <h1>My posts</h1>
+    <div id = "postformat" class="content-item red">
       {% for post in your_own_items %}
         <div class="grid">
           <p id="title">{{post.title}}</p>
