--- a/templates/details.html
+++ b/templates/details.html
@@ -1,19 +1,3 @@
-<!--
-  Copyright 2018 Google LLC
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,12 +22,11 @@
   </div>
   <h1>App Website</h1>
   <div id="main">
-    <h1>Posts</h1>
+    <h1>Item Details</h1>
     <div id = "postformat" class="content-item red">
-      {% for post in everyones_items %}
+      {% for post in your_own_items %}
         <div class="grid">
-          <a href="/details?item_id={{post.key.id()}}">details</a>
-          <p id="title">{{post.title}}</p>
+          <h1 id="title">{{post.title}}</h1>
           <img id="images" src="{{post.image_url}}">
           <p>{{post.caption}}</p>
         </div>
