--- a/templates/posts.html
+++ b/templates/posts.html
@@ -3,23 +3,23 @@
   <head>
       <title>Our great recycling app</title>
       <link rel="stylesheet" href="style.css">
-
+      <link href="https://fonts.googleapis.com/css?family=Happy+Monkey|Josefin+Slab|Lusitana|Mountains+of+Christmas|Prata|Slabo+13px|Zilla+Slab&display=swap" rel="stylesheet">
 
 <body class="Site">
   <main class="Site-content">
     <div id="nav">
-      <a id="link1" href="/"><b>APP</b></a>
-      <a id="link1" href="/new-post"><b>POST</b></a>
-      <a id="link1" href="/my-posts"><b>MY POSTS</b></a>
+      <a id="link1" href="/"><b>Home</b></a>
+      <a id="link1" href="/new-post"><b>Post</b></a>
+      <a id="link1" href="/my-posts"><b>My Posts</b></a>
       <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
     </div>
-  <h1>App Website</h1>
+  <h1>Home Grown</h1>
   <div id="main">
-      <h2>Post your item</h2>
+      <h2>Post Your Item</h2>
     <form method="post" action="/new-post">
-      <p> Item title:</p>
+      <p> Item Title:</p>
       <input type= "text" name="title" value="">
-      <p> Description of your item:</p>
+      <p> Description of Your Item:</p>
       <input type= "text" name="caption" value="">
       <p> Image's URL:</p>
       <input type= "text" name="image_url" value=""><br>
