--- a/templates/style.css
+++ b/templates/style.css
@@ -26,6 +26,8 @@ body {
 }
 #link1 {
     float: left;
+    font-size: 45px;
+    font-family: 'Mountains of Christmas', cursive;
 }
 #postformat {
     display: flex;
@@ -34,7 +36,7 @@ body {
 }
 
 #nav {
-  height: 32px;
+  height: 60px;
   padding: 14px;
   text-align: center;
   overflow: hidden;
