--- a/templates/details.html
+++ b/templates/details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Our great recycling app</title>
+  <title>Our Great Recycling App</title>
 
   <link rel="stylesheet" href="template/style.css">
   <link href="https://fonts.googleapis.com/css?family=Happy+Monkey|Josefin+Slab|Lusitana|Mountains+of+Christmas|Prata|Slabo+13px|Zilla+Slab&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
 
   </div>
   <footer class="red">
-    About us | Contact | Share
+    <a href="/aboutus">About us</a>| <a href="mailto:someone@example.com">Contact</a> | Share
   </footer>
   </main>
 
