Just incase of any changes

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -44,7 +44,7 @@
           <img src="" alt="Gabriela" style="width:100%">
           <div class="container">
             <h2>Gaby</h2>
-            <p class="title">Idk What to Put here</p>
+            <p class="title">Location? Or something else we decides</p>
             <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             <p>example@example.com</p>
           </div>
@@ -56,7 +56,7 @@
           <img src="" alt="Ivania" style="width:100%">
           <div class="container">
             <h2>Ivania </h2>
-            <p class="title">Idk What to Put Here</p>
+            <p class="title">Location? Or something else we decide</p>
             <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             <p>example@example.com</p>
           </div>
@@ -68,9 +68,9 @@
           <img src="" alt="Almaya" style="width:100%">
           <div class="container">
             <h2>Almaya</h2>
-            <p class="title">Idk What to Put Here</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
+            <p class="title">Los Angeles, CA | Evanston, IL</p>
+            <p>I am a rising freshman at Northwestern University. I am so happy that you stumbled upon our website and continue to make efforts to save the environment!</p>
+            <p>wileyyancyalmaya@gmail.com</p>
           </div>
         </div>
       </div>
