Seperated the CSS of the footer from the posts

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -28,7 +28,7 @@
 
   </div>
   </main>
-  <footer class="red">
+  <footer class="stickyfooter">
     <a href="/aboutus">About us</a> | <a href="mailto:someone@example.com">Contact</a> | Share
   </footer>
 </body>
