--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -75,7 +75,7 @@
         </div>
       </div>
     </div>
-  <footer class="red">
+  <footer class="stickyfooter">
     <a href="/aboutus">About us</a> | <a href="mailto:someone@example.com">Contact</a> | Share
   </footer>
   </main>
