--- a/templates/details.html
+++ b/templates/details.html
@@ -36,7 +36,7 @@
     </div>
 
   </div>
-  <footer class="red">
+  <footer class="stickyfooter">
     <a href="/aboutus">About us</a>| <a href="mailto:someone@example.com">Contact</a> | Share
   </footer>
   </main>
