--- a/templates/my-posts.html
+++ b/templates/my-posts.html
@@ -38,7 +38,7 @@
 
 
   </div>
-  <footer class="red">
+  <footer class="stickyfooter">
     <a href="/aboutus">About us</a> | <a href="mailto:someone@example.com">Contact</a> | Share
   </footer>
   </main>
