added place holder

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -57,7 +57,7 @@
           <div class="container">
             <h2>Ivania </h2>
             <p class="title">Location? Or something else we decide</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>Hi, I will be attending UC Riverside in the fall as a freshman.</p>
             <p>example@example.com</p>
           </div>
         </div>
