--- a/templates/posts.html
+++ b/templates/posts.html
@@ -18,11 +18,11 @@
       <h2>Post Your Item</h2>
     <form method="post" action="/new-post">
       <p> Item Title:</p>
-      <input type= "text" name="title" value="">
+      <input type= "text" name="title" value="" placeholder="Title of your item..">
       <p> Description of Your Item:</p>
-      <input type= "text" name="caption" value="">
+      <input type= "text" name="caption" value="" placeholder="Give a datiled description of the item..">
       <p> Image's URL:</p>
-      <input type= "text" name="image_url" value=""><br>
+      <input type= "text" name="image_url" value="" placeholder="Paste image's url.."><br>
       <input type= "submit" value="Post">
     </form>
 
