--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -44,9 +44,9 @@
           <img src="" alt="Gabriela" style="width:100%">
           <div class="container">
             <h2>Gaby</h2>
-            <p class="title">Location? Or something else we decides</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
+            <p class="title">Los Angeles, CA | Atlanta, GA</p>
+            <p>Go Scotties!</p>
+            <p>grodrigue084@gmail.com</p>
           </div>
         </div>
       </div>
