--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -45,7 +45,7 @@
           <p id="title">{{post.title}}</p>
           <img id="images" src="{{post.image_url}}">
           <p>{{post.caption}}</p>
-          <a href="/details?item_id={{post.key.id()}}">More About this Item</a>
+          <a href="/details?item={{post.key.urlsafe()}}">More About this Item</a>
         </div>
       {% endfor %}
 
