--- a/templates/details.html
+++ b/templates/details.html
@@ -21,9 +21,9 @@
     <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
   </div>
   <h1>Home Grown</h1>
-  <div id="main">
-    <h1>Item Details</h1>
-    <div id = "postformat" class="content-item red">
+  <div id="details">
+    <h2>Item Details</h2>
+    <div class="content-item red">
       {{item.title}}
       <img id="images"  src={{item.image_url}}>
       {{item.caption}}
