--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -53,7 +53,7 @@
 
   </div>
   <footer class="stickyfooter">
-    <a href="/aboutus">About us</a> | <a href="mailto:someone@example.com">Contact</a> | Share
+    <a href="/aboutus">About us</a> | <a href="mailto:someone@example.com">Contact</a> | Share | How it works | Community Guidelines
   </footer>
   </main>
 
