html in details

--- a/templates/details.html
+++ b/templates/details.html
@@ -21,9 +21,9 @@
     <a id="loginbuttom" href="{{auth_url}}"><b>{{greeting}}</b></a>
   </div>
   <h1>Home Grown</h1>
-
   <div id="details">
-    <h2>Item Details</h2>
+  <h2>Item Details</h2>
+  <div id="details">
     <div class="content-item red">
       <h2>{{item.title}} </h2>
       <img id="imagesdetails"  src={{item.image_url}}>
