--- a/templates/posts.html
+++ b/templates/posts.html
@@ -20,7 +20,7 @@
       <p> Item Title:</p>
       <input type= "text" name="title" value="" placeholder="Title of your item..">
       <p> Description of Your Item:</p>
-      <input type= "text" name="caption" value="" placeholder="Give a datiled description of the item..">
+      <input type= "text" name="caption" value="" placeholder="Give a detailed description of the item..">
       <p> Image's URL:</p>
       <input type= "text" name="image_url" value="" placeholder="Paste image's url.."><br>
       <input type= "submit" value="Post">
