Change the wording of a button

--- a/templates/details.html
+++ b/templates/details.html
@@ -23,7 +23,7 @@
       <h2>{{item.title}} </h2>
       <img id="imagesdetails"  src={{item.image_url}}>
       <p>{{item.caption}}</p>
-      <input type= "submit" value="Message owner">
+      <input type= "submit" value="Message Owner">
       <!--<h4>The fetched records from the query look like this</h4> {{everyones_posts}}-->
     </div>
 
