Got rid of the image tages

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -36,7 +36,6 @@
       <div class="row">
       <div class="column">
         <div class="card">
-          <img src="" alt="Gabriela" style="width:100%">
           <div class="container">
             <h2>Gaby</h2>
             <p class="title">Los Angeles, CA | Atlanta, GA</p>
@@ -48,19 +47,17 @@
 
       <div class="column">
         <div class="card">
-          <img src="" alt="Ivania" style="width:100%">
           <div class="container">
             <h2>Ivania </h2>
-            <p class="title">Location? Or something else we decide</p>
+            <p class="title">Montebello, CA | Riverside, CA</p>
             <p>Hi, I will be attending UC Riverside in the fall as a freshman.</p>
-            <p>example@example.com</p>
+            <p>hivania@gmail.com</p>
           </div>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <img src="" alt="Almaya" style="width:100%">
           <div class="container">
             <h2>Almaya</h2>
             <p class="title">Los Angeles, CA | Evanston, IL</p>
